[package]
name = "runrunrun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmtime = { git= "https://github.com/bytecodealliance/wasmtime" }
serde_json = "1.0.87"
serde = { version = "1.0", features = ["derive"] }
